--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,38 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Folder config file
-Desktop.ini
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
+### mac ###
 .DS_Store
-.AppleDouble
-.LSOverride
 
-# Thumbnails
-._*
+### npm ###
+node_modules/
+.vscode/
 
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-node_modals
+target/
+bin/
+node_modules/
+assets/
+lib/
+dist/
