--- a/gsitewebfront/frontend/package.json
+++ b/gsitewebfront/frontend/package.json
@@ -4,9 +4,7 @@
   "description": "gsite的前端",
   "main": "index.js",
   "scripts": {
-    "devserver": "./node_modules/.bin/webpack-dev-server --progress --profile --colors",
-    "dev": "npm run devserver -- --env=dev",
-    "build:prod": "npm run webpack -- --env=prod",
+    "prod": "./node_modules/.bin/webpack --env=prod",
     "middev": "node ./middleware.js"
   },
   "author": "geek720",
