--- a/gsitewebfront/frontend/package.json
+++ b/gsitewebfront/frontend/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "github-markdown-css": "^2.10.0",
